Add BALLDONTLIE ingestion + Supabase schemas

--- a/config/env.example
+++ b/config/env.example
@@ -3,6 +3,19 @@
 #   cp config/env.example .env   (if your environment allows dotfiles)
 # Or export vars directly in your shell.
 
+# ----------------------------
+# Supabase + BALLDONTLIE (new)
+# ----------------------------
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+BALLDONTLIE_API_KEY=
+
+# Optional ingestion flags
+# - Set to 1 to attempt GOAT advanced endpoints (may be unstable at times)
+BDL_INCLUDE_ADVANCED=0
+# - Set to 1 to run ONLY advanced endpoints (skips core + season/game stats)
+BDL_ADVANCED_ONLY=0
+
 # SQLite DB path (absolute or relative to project root)
 NFL_DB_PATH=data/nfl_data.db
 
